--- a/css/style.css
+++ b/css/style.css
@@ -47,16 +47,22 @@ body{
   justify-content: center;
 }
 
+.full{
+  width: 100%;
+}
+
 /*****************************************HEADER******************************************/
 
 header{
   background-color: #F86701;
   width: 100%;
   height: 80px;
+  position: fixed;
+  z-index: 999;
 }
 
 .logo{
-  width: 150px;
+  width: 170px;
   height: 40px;
 }
 
@@ -64,7 +70,7 @@ li{
   list-style: none;
 }
 
-a{
+header a{
   padding: 10px;
   text-decoration: none;
   color: white;
@@ -73,7 +79,7 @@ a{
 /******************************************MAIN*******************************************/
 
 main{
-
+padding-top: 120px;
 }
 
 main img{
@@ -168,3 +174,31 @@ p{
   display: block;
 }
 
+/*****************************************FOOTER******************************************/
+
+footer{
+  background-color: #1A1A1A;
+  width: 100%;
+  min-height: 80px;
+  color: white;
+  padding: 20px;
+}
+
+.box{
+  width: calc(100% / 2) -50px;;
+}
+
+footer a {
+  font-size: .8rem;
+  color: white;
+  text-decoration: none;
+  padding: 3px;
+}
+
+.icons{
+  justify-content: flex-end;
+}
+
+footer h5{
+  padding-left: 9px;
+}
