--- a/css/style.css
+++ b/css/style.css
@@ -1,151 +1,170 @@
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
 /******************************************UTILS******************************************/
-body{
+body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-.debug{
-  border: 1px solid black;
+.debug {
+  border: 1px solid red;
 }
 
-.wrapper{
+.wrapper {
   width: 1100px;
   margin: 0 auto;
 }
 
-.flex{
+.flex {
   display: flex;
 }
 
-.wrap{
+.wrap {
   flex-wrap: wrap;
 }
 
-.col{
+.col {
   flex-direction: column;
 }
 
-.row{
+.row {
   flex-direction: row;
 }
 
-.center{
+.center {
   align-items: center;
   justify-content: center;
 }
 
-.ai-center{
+.ai-center {
   align-items: center;
 }
 
-.jc-center{
+.jc-center {
   justify-content: center;
 }
+.jc-around {
+  justify-content: space-around;
+}
+.jc-evenly {
+  justify-content: space-evenly;
+}
 
-.full{
-  width: 100%;
+.full {
+  height: 100%;
 }
 
 /*****************************************HEADER******************************************/
 
-header{
-  background-color: #F86701;
+header {
+  background-color: #f86701;
   width: 100%;
   height: 80px;
   position: fixed;
   z-index: 999;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding-left: 250px;
+  padding-right: 250px;
 }
 
-.logo{
-  width: 170px;
-  height: 40px;
+header .logo {
+  width: 160px;
 }
 
-li{
+li {
   list-style: none;
 }
 
-header a{
-  padding: 10px;
+header a {
   text-decoration: none;
   color: white;
 }
 
-/******************************************MAIN*******************************************/
-
-main{
-padding-top: 120px;
+.margin-10 {
+  margin: 15px;
 }
 
-main img{
+.margin-5 {
+  margin: 7px;
+}
+
+/******************************************MAIN*******************************************/
+
+main {
+  padding-top: 150px;
+}
+
+main img {
   height: 100%;
   width: 100%;
 }
 
-.cards{
-  width: calc(1100px / 3 ) -10px;
-  margin: 10px;
+.cards {
+  width: calc(100% / 3);
+  padding: 0 10px;
 }
 
-.img{
-  height: 480px;
+.img {
+  max-height: 480px;
 }
 
-.text{
+.text {
+  margin-top: 25px;
   width: 345px;
   height: 95px;
 }
 
-.red-text{
+.red-text {
   color: red;
 }
 
-.lt{
+.lt {
   text-decoration: line-through;
 }
 
-p{
-  font-size: .9rem;
+p {
+  font-size: 0.9rem;
 }
 
-.relative{
+.relative {
   position: relative;
 }
 
-.absolute-red{
+.absolute-red {
   position: absolute;
   bottom: 25px;
   padding: 5px 12px;
   background-color: red;
   color: white;
-  font-size: .8rem;
+  font-size: 0.8rem;
 }
 
-.absolute-green{
+.absolute-green {
   position: absolute;
   bottom: 25px;
   padding: 5px 12px;
   background-color: green;
   color: white;
-  font-size: .8rem;
+  font-size: 0.8rem;
 }
 
-.absolute-green-second{
+.absolute-green-second {
   position: absolute;
   bottom: 25px;
   left: 58px;
   padding: 5px 12px;
   background-color: green;
   color: white;
-  font-size: .8rem;
+  font-size: 0.8rem;
 }
 
-.heart{
+.heart {
   position: absolute;
   right: 0;
   top: 8px;
@@ -153,52 +172,52 @@ p{
   background-color: white;
 }
 
-.heart:hover{
+.heart:hover {
   color: red;
   cursor: pointer;
 }
 
-.img .primary-image{
+.img .primary-image {
   display: block;
 }
 
-.img .secondary-image{
+.img .secondary-image {
   display: none;
 }
 
-.img:hover .primary-image{
+.img:hover .primary-image {
   display: none;
 }
 
-.img:hover .secondary-image{
+.img:hover .secondary-image {
   display: block;
 }
 
 /*****************************************FOOTER******************************************/
 
-footer{
-  background-color: #1A1A1A;
+footer {
+  background-color: #1a1a1a;
   width: 100%;
-  min-height: 80px;
+  height: 100%;
   color: white;
-  padding: 20px;
-}
-
-.box{
-  width: calc(100% / 2) -50px;;
+  padding-top: 20px;
+  padding-bottom: 30px;
 }
 
 footer a {
-  font-size: .8rem;
+  font-size: 0.8rem;
   color: white;
   text-decoration: none;
-  padding: 3px;
 }
 
-.icons{
-  justify-content: flex-end;
+footer i {
+  font-size: 1rem;
+  padding-bottom: 65px;
+}
+footer h5 {
+  margin-bottom: 10px;
 }
 
-footer h5{
-  padding-left: 9px;
+.footer-margin {
+  margin-right: 200px;
 }
